# processSnapshot

./: .editorconfig  .gitignore  CMakeLists.txt  GETTING_STARTED.md  GOREV_DAGILIMI.md  INSTALLATION.md  README.md  build.sh
examples/: CMakeLists.txt  auto_save_example.cpp  partial_rollback_example.cpp  process_demo.cpp  real_process_demo.cpp  real_restore_test.cpp  real_restore_test_v2.cpp  real_restore_test_v3.cpp  real_restore_test_v4.cpp  real_restore_test_v5.cpp  simple_example.cpp
include/core/: exceptions.hpp  serializer.hpp  types.hpp
include/logger/: operation_logger.hpp
include/process/: instruction_set.hpp  process_simulator.hpp  process_types.hpp
include/real_process/: aslr_handler.hpp  fd_restorer.hpp  file_operation.hpp  memory_manager.hpp  proc_reader.hpp  ptrace_controller.hpp  real_process_types.hpp  reverse_executor.hpp
include/rollback/: rollback_engine.hpp
include/state/: state_manager.hpp  storage.hpp
include/utils/: helpers.hpp
src/: main.cpp
src/cli/: process_checkpoint_cli.cpp
src/core/: serializer.cpp
src/logger/: operation_logger.cpp
src/process/: instruction_set.cpp  process_simulator.cpp  process_types.cpp
src/real_process/: aslr_handler.cpp  fd_restorer.cpp  file_operation.cpp  memory_manager.cpp  proc_reader.cpp  ptrace_controller.cpp  real_process_types.cpp  reverse_executor.cpp
src/rollback/: rollback_engine.cpp
src/state/: state_manager.cpp  storage.cpp
tests/: CMakeLists.txt  test_file_operation_advanced.cpp  test_integration.cpp  test_logger.cpp  test_process.cpp  test_reverse_execution.cpp  test_rollback.cpp  test_serializer.cpp  test_state_manager.cpp
